tentativa de resolução do erro de imgs

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </main>
 
     <footer>
-        <p>Site criado por <a href="https://github.com/VitorTdev">Vitor Teixeira Martins</a> para o <a href="https://www.cursoemvideo.com">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://github.com/VitorTdev" target="_blank">Vitor Teixeira Martins</a> para o <a href="https://www.cursoemvideo.com" target="_blank">CursoemVideo</a></p>
     </footer>
     
 </body>
